# capsule

./: .gitignore  API_CLIENT_INTEGRATION.md  API_INTEGRATION_README.md  API_QUICK_START.md  Cargo.toml  DELIVERABLES.md  GIT_REPOSITORY_ANALYSIS.md  INSTALL.md  INVENTORY_SYSTEM.md  MONITORING.md  MONITORING_INTEGRATION.md  MONITORING_SUMMARY.md  MONITORING_SYSTEM.md  NIX_IMPLEMENTATION_SUMMARY.md  NIX_INTEGRATION_GUIDE.md  OPENMESH_COMPLETE.md  PROVIDER_SYSTEM_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUST_REWRITE_COMPLETE.md  capsule
capsule_package/: api_clients.py  inventory.py  providers.py
capsule_package/presets/: cuda.yml  devtools.yml  nodejs.yml  python.yml  rust.yml
capsule_package/sprouts/: claude-code.yml  github-cli.yml  qwen2.5-coder-14b.yml  qwen2.5-coder-32b.yml  qwen2.5-coder-7b.yml
docs/: INVENTORY_SYSTEM.md
examples/: inventory_demo.py  monitoring_cli.rs
py/: CAPSULE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INVENTORY_QUICKSTART.md  INVENTORY_SUMMARY.md  INVENTORY_VERIFICATION.md  NIXOS_GENERATOR_IMPLEMENTATION.md  NIXOS_QUICKSTART.md  flake.nix  install.sh  setup.py
py/capsule_package/: __init__.py  __init__.py.bak2  inventory.py.bak3  monitoring.py  nixos_generator.py  openmesh_core.py
py/examples/: inventory_cli_integration.py
src/: config.rs  cost.rs  datastore.rs  inventory.rs  lib.rs  main.rs  main_nixos_additions.rs  nix.rs  nixos.rs  openmesh.rs  openmesh_cli.rs  ui.rs  xnode.rs
src/api/: aws.rs  client.rs  digitalocean.rs  equinix.rs  error.rs  hivelocity.rs  (+4 more)
tests/: test_providers.py
(+34 files in other folders)
