[package]
name = "capsule"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
prettytable-rs = "0.10"
colored = "2.1"
home = "0.5"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sled = "0.34"
flate2 = "1.0"
base64 = "0.21"
dialoguer = "0.11"
